# amiga_slam

./: .gitignore  CLAUDE.md  README.md  frames_2026-03-04_14.06.02.gv  frames_2026-03-04_14.10.49.gv
config/: velodyne_transform.yaml
scripts/: build.sh  env.sh  install_farmng.sh  run_live.sh  save_map.sh
src/amiga_bringup/: package.xml  setup.py
src/amiga_bringup/amiga_bringup/: amiga_ros2_bridge.py  autonomous_row_coverage.py  field_coverage_planner.py
src/amiga_bringup/config/: ekf.yaml  nav2_params.yaml  velodyne_transform.yaml
src/amiga_bringup/launch/: amiga_bringup_nodes.launch.py  amiga_grpc_bridge.launch.py  autonomous_coverage.launch.py  bringup_sensors.launch.py  field_coverage.launch.py  localize_nav.launch.py  nav2.launch.py  sensors_live.launch.py  slam_bag_replay.launch.py  slam_full.launch.py  slam_live.launch.py  slam_localization.launch.py  slam_nav.launch.py  slam_rtabmap_lidar3d.launch.py  tf_static.launch.py  tf_static_base_to_velodyne.launch.py  velodyne_vlp16.launch.py
src/amiga_bringup/rviz/: slam_lidar.rviz
src/amiga_bringup/urdf/: amiga_min.urdf
